solve z-index conflict with Twitter Bootstrap modal in CSS (#1569)

--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -479,7 +479,7 @@ Comment For Cell
 .htContextMenu {
   display: none;
   position: absolute;
-  z-index: 900;
+  z-index: 1060; /*needs to be higher than 1050 - z-index for Twitter Bootstrap modal (#1569)*/
 }
 
 .htContextMenu .ht_clone_top,
